--- a/ProjectSE/nbproject/project.properties
+++ b/ProjectSE/nbproject/project.properties
@@ -39,7 +39,9 @@ includes=**
 jar.archive.disabled=true
 jar.compress=false
 javac.classpath=\
-    ${javafx.classpath.extension}
+    ${javafx.classpath.extension}:\
+    ${libs.hamcrest.classpath}:\
+    ${libs.junit_4.classpath}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
