--- a/ProjectSE/nbproject/project.properties
+++ b/ProjectSE/nbproject/project.properties
@@ -1,6 +1,5 @@
 annotation.processing.enabled=true
 annotation.processing.enabled.in.editor=false
-annotation.processing.processor.options=
 annotation.processing.processors.list=
 annotation.processing.run.all.processors=true
 annotation.processing.source.output=${build.generated.sources.dir}/ap-source-output
@@ -34,6 +33,8 @@ dist.jar=${dist.dir}/ProjectSE.jar
 dist.javadoc.dir=${dist.dir}/javadoc
 endorsed.classpath=
 excludes=
+file.reference.hamcrest-core-1.3.jar=C:\\Users\\PRINCIPAL\\Downloads\\hamcrest-core-1.3.jar
+file.reference.junit-4.13.2.jar=C:\\Users\\PRINCIPAL\\Downloads\\junit-4.13.2.jar
 includes=**
 # Non-JavaFX jar file creation is deactivated in JavaFX 2.0+ projects
 jar.archive.disabled=true
@@ -41,19 +42,26 @@ jar.compress=false
 javac.classpath=\
     ${javafx.classpath.extension}:\
     ${libs.hamcrest.classpath}:\
-    ${libs.junit_4.classpath}
+    ${libs.junit_4.classpath}:\
+    ${file.reference.hamcrest-core-1.3.jar}:\
+    ${file.reference.junit-4.13.2.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
+javac.external.vm=false
 javac.modulepath=
 javac.processormodulepath=
 javac.processorpath=\
-    ${javac.classpath}
+    ${javac.classpath}:\
+    ${file.reference.hamcrest-core-1.3.jar}:\
+    ${file.reference.junit-4.13.2.jar}
 javac.source=1.8
 javac.target=1.8
 javac.test.classpath=\
     ${javac.classpath}:\
-    ${build.classes.dir}
+    ${build.classes.dir}:\
+    ${file.reference.hamcrest-core-1.3.jar}:\
+    ${file.reference.junit-4.13.2.jar}
 javac.test.modulepath=\
     ${javac.modulepath}
 javac.test.processorpath=\
@@ -61,6 +69,7 @@ javac.test.processorpath=\
 javadoc.additionalparam=
 javadoc.author=false
 javadoc.encoding=${source.encoding}
+javadoc.html5=false
 javadoc.noindex=false
 javadoc.nonavbar=false
 javadoc.notree=false
@@ -100,6 +109,8 @@ javafx.preloader.type=none
 javafx.rebase.libs=false
 javafx.run.height=600
 javafx.run.width=800
+jlink.launcher=false
+jlink.launcher.name=ProjectSE
 # Pre-JavaFX 2.0 WebStart is deactivated in JavaFX 2.0+ projects
 jnlp.enabled=false
 # Main class for Java launcher
@@ -110,16 +121,21 @@ manifest.custom.codebase=*
 manifest.custom.permissions=
 manifest.file=manifest.mf
 meta.inf.dir=${src.dir}/META-INF
+mkdist.disabled=false
 platform.active=default_platform
 run.classpath=\
     ${dist.jar}:\
     ${javac.classpath}:\
-    ${build.classes.dir}
+    ${build.classes.dir}:\
+    ${file.reference.hamcrest-core-1.3.jar}:\
+    ${file.reference.junit-4.13.2.jar}
 run.modulepath=\
     ${javac.modulepath}
 run.test.classpath=\
     ${javac.test.classpath}:\
-    ${build.test.classes.dir}
+    ${build.test.classes.dir}:\
+    ${file.reference.junit-4.13.2.jar}:\
+    ${file.reference.hamcrest-core-1.3.jar}
 run.test.modulepath=\
     ${javac.test.modulepath}
 source.encoding=UTF-8
