--- a/ProjectSE/nbproject/project.properties
+++ b/ProjectSE/nbproject/project.properties
@@ -33,18 +33,14 @@ dist.jar=${dist.dir}/ProjectSE.jar
 dist.javadoc.dir=${dist.dir}/javadoc
 endorsed.classpath=
 excludes=
-file.reference.hamcrest-core-1.3.jar=C:\\Users\\PRINCIPAL\\Downloads\\hamcrest-core-1.3.jar
-file.reference.junit-4.13.2.jar=C:\\Users\\PRINCIPAL\\Downloads\\junit-4.13.2.jar
+
 includes=**
 # Non-JavaFX jar file creation is deactivated in JavaFX 2.0+ projects
 jar.archive.disabled=true
 jar.compress=false
 javac.classpath=\
     ${javafx.classpath.extension}:\
-    ${libs.hamcrest.classpath}:\
-    ${libs.junit_4.classpath}:\
-    ${file.reference.hamcrest-core-1.3.jar}:\
-    ${file.reference.junit-4.13.2.jar}
+    ${libs.hamcrest.classpath}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
@@ -61,7 +57,8 @@ javac.test.classpath=\
     ${javac.classpath}:\
     ${build.classes.dir}:\
     ${file.reference.hamcrest-core-1.3.jar}:\
-    ${file.reference.junit-4.13.2.jar}
+    ${file.reference.junit-4.13.2.jar}:\
+    ${libs.hamcrest.classpath}
 javac.test.modulepath=\
     ${javac.modulepath}
 javac.test.processorpath=\
